[gd_scene load_steps=9 format=3 uid="uid://b01txgtvmhtgt"]

[ext_resource type="Script" path="res://boid.gd" id="1_jum0w"]
[ext_resource type="Texture2D" uid="uid://07xgssxueyf0" path="res://birds.png" id="2_4tj3v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wa2aa"]
atlas = ExtResource("2_4tj3v")
region = Rect2(8, 39, 18, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce8uy"]
atlas = ExtResource("2_4tj3v")
region = Rect2(29, 39, 18, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3che"]
atlas = ExtResource("2_4tj3v")
region = Rect2(50, 39, 18, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_6351j"]
atlas = ExtResource("2_4tj3v")
region = Rect2(71, 39, 18, 13)

[sub_resource type="SpriteFrames" id="SpriteFrames_ue1tq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wa2aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce8uy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3che")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6351j")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_uwl25"]
radius = 24.1868

[node name="Boid" type="CharacterBody2D"]
script = ExtResource("1_jum0w")
SPEED = 300.0
min_speed = 200.0
seperation_factor = 2.422
cohesion_factor = 0.391
matching_factor = 0.131
close_range = 20.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(3.55271e-15, 5.96046e-08)
rotation = 1.57079
scale = Vector2(2.30769, 2.30769)
sprite_frames = SubResource("SpriteFrames_ue1tq")
animation = &"fly"
frame = 3
frame_progress = 1.0
offset = Vector2(0.433334, -2.98023e-08)

[node name="Body" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_uwl25")

[node name="View" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 7

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="View"]
polygon = PackedVector2Array(-21, 1, 66, -130, 238, 0, 78, 115)

[node name="AlignmentPoint" type="Line2D" parent="."]
visible = false
width = 3.0
default_color = Color(0.203922, 0.32549, 0.733333, 1)

[node name="CohesionPoint" type="Line2D" parent="."]
visible = false
width = 3.0
default_color = Color(0.490196, 0.705882, 0.211765, 1)

[node name="SeperationPoint" type="Line2D" parent="."]
visible = false
width = 3.0
default_color = Color(0.756863, 0.192157, 0.203922, 1)

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-2, 12, -2, -10, 27, 0)

[connection signal="body_entered" from="View" to="." method="_on_view_body_entered"]
[connection signal="body_exited" from="View" to="." method="_on_view_body_exited"]
